# rmcp

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.base  Dockerfile.ci  MANIFEST.in  Makefile  README.md  citation.cff  docker-entrypoint.sh  marketing_data_example.py  pyproject.toml  quick_test.py  requirements.txt  rmcp.py  run_streamlit.py  run_tests.py  test_claude_integration.py  test_customer_data.json  test_request.json  test_rmcp.py  test_rmcp_scenarios.md  user_test_scenario.py  validate_for_users.py
.github/workflows/: build-base-image.yml  ci.yml  deploy.yml  docker-build.yml  docs.yml  python-publish.yml  release.yml  requirements.txt  test-matrix.yml  test.yml
docker/: Dockerfile  Dockerfile.production
docs/: api-reference.md  claude-connector-spec.md  conf.py  configuration.md  examples.md  http-api.md  index.md  index.rst  installation.md  quick-start.md  troubleshooting.md  troubleshooting.rst
docs/api/: regression.rst  rmcp.rst  visualization.rst
docs/configuration/: loader.rst
docs/deployment/: production.md
docs/development/: script-organization.md
docs/http-server/: api-reference.rst  deployment.rst  getting-started.rst  validated-examples.rst
docs/shared/: examples.rst  troubleshooting.rst
docs/user_guide/: installation.rst  quick_start.rst
examples/: advanced_time_series_example.md  claude_desktop_advanced_examples.md  claude_desktop_v0.5.0_examples.md  claude_desktop_winsorize_examples.md  economic_research_example.md  image_display_example.md  quick_start_guide.md
rmcp/: __init__.py  __main__.py  cli.py  discovery.py  exceptions.py  logging_config.py  r_formatting.py  r_integration.py  r_session.py  tools.py  types.py  version.py
rmcp/config/: defaults.py  loader.py  models.py  schema.py
rmcp/core/: __init__.py  context.py  schemas.py  sdk_adapter.py  server.py
rmcp/r_assets/: .lintr  DESCRIPTION  README.md  build_docs.R  format_r.R  lint_r.R  loader.py  run_tests.R  template.R  validate_r.R
rmcp/registries/: __init__.py  prompts.py  resources.py  tools.py
rmcp/security/: vfs.py
rmcp/server/: fastmcp.py  legacy_server.py
rmcp/tools/: __init__.py  common.py  correlation.py  descriptive.py  diagnostics.py  econometrics.py  file_analysis.py  fileops.py  flexible_r.py  formula_builder.py  groupby.py  helpers.py  introspection.py  machine_learning.py  mcp_instance.py  package_security.py  package_tiers.py  regression.py  statistical_tests.py  timeseries.py  tools.py  transforms.py  visualization.py  (+1 more)
scripts/: README.md  analyze_dependencies.py  format.sh  manage.py  test-claude-connector.py  test.sh
streamlit/: README.md  app.py  requirements.txt  streamlit_app.py
tests/: .test_baseline.json  TESTING_STRATEGY.md  conftest.py  dev_server.py  realistic_scenarios.py  run_all_tests.py  run_cli_tests.sh  run_tests.sh  sample.csv  test_all_tools.sh  test_common.py  test_correlation.json  test_direct_capabilities.py  test_integration.py  test_mcp_interface.py  test_mcp_protocol.json  test_mcp_tool_call.json  test_r_loader.py  test_realistic_scenarios.py  test_rmcp.py  test_server.py  test_server_basic.py  utils.py
(+171 files in other folders)
