[tool.poetry]
name = "rmcp"
version = "0.1.1"
description = "A Model Context Protocol server for R"
authors = ["Gaurav Sood <gsood07@gmail.com>"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/gojiplus/rmcp"

[tool.poetry.dependencies]
python = ">=3.8"
click = ">=8.1.0"

[tool.poetry.scripts]
rmcp = "rmcp.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"